--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,24 +3,14 @@ name = "zero2prod"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
-
-# A sizeable chunk of time is spent in the linking phase - 
-# assembling the actual binary given the outputs of the earlier compilation stages.
-# The default linker does a good job, but there is a faster alternative: lld, a linker 
-# developed by the LLVM project.
-# To speed up the linking phase you have to install the alternative 
-# linker on your machine and add this configuration file to the project:
-
-# On Linux:
-# - Ubuntu, `sudo apt-get install lld clang`
-# - Arch, `sudo pacman -S lld clang`
-# [target.x86_64-unknown-linux-gnu]
-# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
-
-# On MacOS, `brew install llvm` and follow steps in `brew info llvm`
-# [target.x86_64-apple-darwin]
-# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
-
-# [target.aarch64-apple-darwin]
-# rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
+actix-web = "4.9.0"
+reqwest = "0.12.9"
+tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
