--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4.9.0"
 reqwest = "0.12.9"
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.134"
 tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
