--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: taiki-e/install-action@cargo-deny
       - name: Scan for vulnerabilities
         run: cargo deny check advisories
+        env:
+          SQLX_OFFLINE: true
