--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ sqlx = { version = "0.8", default-features = false, features = [
 ] }
 uuid = { version = "1.11.0", features = ["v4"] }
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
+env_logger = "0.11.6"
