--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,19 @@ serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
 tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
 sqlx = { version = "0.8", default-features = false, features = [
-  "runtime-tokio-rustls",
-  "macros",
-  "postgres",
-  "uuid",
-  "chrono",
-  "migrate",
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
 ] }
 uuid = { version = "1.11.0", features = ["v4"] }
 chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
-env_logger = "0.11.6"
-log = "0.4.22"
+tracing = { version = "0.1.41", features = ["log"] }
+tracing-subscriber = { version = "0.3.19", features = [
+    "registry",
+    "env-filter",
+] }
+tracing-bunyan-formatter = "0.3.10"
+tracing-log = "0.2.0"
