Use instrument macro to simplify observability

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,3 +78,5 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - run: cargo install cargo-tarpaulin
       - run: cargo tarpaulin --ignore-tests
+        env:
+          SQLX_OFFLINE: true
