--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ tracing-subscriber = { version = "0.3.19", features = [
 ] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
+secrecy = { version = "0.10.3", features = ["serde"] }
