Allow environment variables to overwrite applition config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,4 @@ tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
 secrecy = { version = "0.10.3", features = ["serde"] }
 tracing-actix-web = "0.7.15"
+serde-aux = "4.5.0"
